--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ I hope you enjoy!</i><br><br>
 <a href="Theater.html">Theater</a><br>
 
 <a href="Mystery.html">Mystery Site</a><br>
+  
+<a href="Mystery.html">Mystery Site</a><br>
 
 </h2>
 
