--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ I hope you enjoy!</i><br><br>
 
 <a href="Mystery.html">Mystery Site</a><br>
   
-<a href="Mystery.html">Mystery Site</a><br>
+<a href="NinaApp.html">Mystery Site</a><br>
 
 </h2>
 
