--- a/NinaApp.html
+++ b/NinaApp.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
 <html lang="en">
 <body bgcolor="#ff0066">
 <head>
