--- a/SecondPage.html
+++ b/SecondPage.html
@@ -24,10 +24,10 @@ body {
 <font size="6"><center><h1>Options</h1></center></font>
 <font size="6"><center><p>What Are You Trying To Do?</p></center></font>
 <center><div class="btn-group">
-  <button> <a href="sms: 9733030124&body=Hi there, I'd like to place or order for...">I miss you</a></button>
-  <button> <a href="sms: 9733030124&body=Hi there, I'd like to place or order for...">I need attention</a></button>
-<button> <a href="sms: 9733030124&body=Hi there, I'd like to place or order for...">Having a bad day</a></button>
-  <button> <a href="sms: 9733030124&body=Hi there, I'd like to place or order for...">Other!</a></button></center>
+  <button> <a href="sms: 9733030124&body=Hi I miss you and I wish we could be together right now but for now just text me back :( ">I miss you</a></button>
+  <button> <a href="sms: 9733030124&body=Hi I need your attention and just attention in general! ">I need attention</a></button>
+<button> <a href="sms: 9733030124&body=Hi i'm not having the best day can you please text me and we can talk about it.">Having a bad day</a></button>
+  <button> <a href="sms: 9733030124&body=Hi there, this is a pregenerated text that establishes my mood does not fit into one of the other categories so figure out why i'm in this mood.">Other!</a></button></center>
 
   
 </div>
