--- a/SecondPage.html
+++ b/SecondPage.html
@@ -28,6 +28,7 @@ body {
   <button> <a href="sms: 9733030124&body=Hi I need your attention and just attention in general! ">I need attention</a></button>
 <button> <a href="sms: 9733030124&body=Hi i'm not having the best day can you please text me and we can talk about it.">Having a bad day</a></button>
   <button> <a href="sms: 9733030124&body=Hi there, this is a pregenerated text that establishes my mood does not fit into one of the other categories so figure out why i'm in this mood.">Other!</a></button></center>
+ <center><button type="button" class="block"><a href="rickRoll.html">Secret Page Do Not Click!</a></button></center></center>
 
   
 </div>
