--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ I hope you enjoy!</i><br><br>
 <a href="Mystery.html">Mystery Site</a><br>
   
 <a href="LoginPasswordBaron.html">For You</a><br>
+ 
+<a href="friendsRedirect.html">For Friends</a><br>
 
 </h2>
 
