--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ I hope you enjoy!</i><br><br>
   
 <a href="LoginPasswordBaron.html">For You</a><br>
  
-<a href="friendsLogin.html">For You</a><br>
+<a href="friendsLogin.html">For Friends</a><br>
 
 </h2>
 
