--- a/NinaApp.html
+++ b/NinaApp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <button> <a href="index.html">Home</a></button>
-<button onclick="goBack()">Go Back</button>
+<button onclick="LoginPasswordBaron.html">Go Back</button>
 
 <script>
 function goBack() {
