--- a/NinaApp.html
+++ b/NinaApp.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 
 <button> <a href="index.html">Home</a></button>
-<button onclick="LoginPasswordBaron.html">Go Back</button>
+<button> <a href="LoginPasswordBaron.html">Back</a></button>
 
-<script>
-function goBack() {
-  window.history.back();
-}
-</script>
 <html lang="en">
 <body bgcolor="#ff0066">
 <head>
