--- a/friendsRedirect.html
+++ b/friendsRedirect.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 <body bgcolor="#3f4161">
+<button> <a href="index.html">Home</a></button>
+
 <h1>Hey, welcome to the site! I'm glad you were able to get this far, and for that I will now listen to your day. </h1>
 <h1>So tell me:</h1>
 
