--- a/friendsRedirect.html
+++ b/friendsRedirect.html
@@ -3,6 +3,8 @@
 <body>
 <body bgcolor="#3f4161">
 <button> <a href="index.html">Home</a></button>
+<button> <a href="friendsLogin.html">Back</a></button>
+
 
 <h1>Hey, welcome to the site! I'm glad you were able to get this far, and for that I will now listen to your day. </h1>
 <h1>So tell me:</h1>
