--- a/SecondPage.html
+++ b/SecondPage.html
@@ -23,14 +23,8 @@ body {
 
 <font size="6"><center><h1>Options</h1></center></font>
 <font size="6"><center><p>What Are You Trying To Do?</p></center></font>
-<center><div class="btn-group">
-  <button> <a href="sms: 9733030124&body=Hi I miss you and I wish we could be together right now but for now just text me back :( ">I miss you</a></button>
-  <button> <a href="sms: 9733030124&body=Hi I need your attention and just attention in general! ">I need attention</a></button>
-<button> <a href="sms: 9733030124&body=Hi i'm not having the best day can you please text me and we can talk about it.">Having a bad day</a></button>
-  <button> <a href="sms: 9733030124&body=Hi there, this is a pregenerated text that establishes my mood does not fit into one of the other categories so figure out why i'm in this mood.">Other!</a></button></center>
- <center><button type="button" class="block"><a href="rickRoll.html">Secret Page Do Not Click!</a></button></center></center>
-
-  
+<center><div>
+    <a href="instagram//:media?id=434784289393782000_15903882">instagram://media?id=434784289393782000_15903882</a>
 </div>
 </body>
 </html>
