--- a/SecondPage.html
+++ b/SecondPage.html
@@ -24,7 +24,7 @@ body {
 <font size="6"><center><h1>Options</h1></center></font>
 <font size="6"><center><p>What Are You Trying To Do?</p></center></font>
 <center><div>
-    <a href="instagram//:media?id=434784289393782000_15903882">instagram://media?id=434784289393782000_15903882</a>
+    <a href="https://www.instagram.com/buhnutt/">The Gram</a>
 </div>
 </body>
 </html>
