--- a/SecondPage.html
+++ b/SecondPage.html
@@ -23,9 +23,13 @@ body {
 
 <font size="6"><center><h1>Options</h1></center></font>
 <font size="6"><center><p>What Are You Trying To Do?</p></center></font>
-<center><div>
-    <a href="https://www.instagram.com/buhnutt/">The Gram</a>
+<center><div class="btn-group">
+  <button> <a href="sms: 9733030124&body=Hi there, I'd like to place or order for...">I miss you</a></button>
+  <button> <a href="sms: 9733030124&body=Hi there, I'd like to place or order for...">I need attention</a></button>
+<button> <a href="sms: 9733030124&body=Hi there, I'd like to place or order for...">Having a bad day</a></button>
+  <button> <a href="sms: 9733030124&body=Hi there, I'd like to place or order for...">Other!</a></button></center>
+
+  
 </div>
 </body>
 </html>
-
