--- a/SecondPage.html
+++ b/SecondPage.html
@@ -21,10 +21,10 @@ body {
 <body>
 
 
-<font size="6"><center><h1>Options</h1></center></font>
-<font size="6"><center><p>What Are You Trying To Do?</p></center></font>
+<font size="6"><center><h1>Bennetts Instagram</h1></center></font>
+<font size="6"><center><p>Wanna See My Instagram?</p></center></font>
 <center><div>
-    <a href="https://www.instagram.com/buhnutt/">Wanna See My Instagram?</a>
+    <a href="https://www.instagram.com/buhnutt/">The Gram</a>
 </div>
 </body>
 </html>
