--- a/SecondPage.html
+++ b/SecondPage.html
@@ -18,7 +18,7 @@ body {
 <font size="6"><center><h1>Bennetts Instagram</h1></center></font>
 <font size="6"><center><p>Wanna See My Instagram?</p></center></font>
 <center><div>
-    <a href="https://www.instagram.com/buhnutt/">The Gram</a>
+    <h1><a href="https://www.instagram.com/buhnutt/">The Gram</a></h1>
 </div>
 </body>
 </html>
