--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ There are various links below which will redirect you to the links and descripti
 You are able to navigate back and forth from the other pages to the home page by clicking the back button on the top of each page. 
 I hope you enjoy!</i><br><br>
 
-<i>Also, this weeks winner of the Instagram Fan of the Week is Ben Finger! Give him a follow @Bfinger616!</i><br>
+<i>Also, this weeks winner of the Instagram Fan of the Week is Alexander Baron! Give him a follow @alexandermbaron</i><br>
 <i>Want to be featured on next weeks update? DM @Buhnutt with the answer to the following question:</i><br> 
 <i>What are the four US State capitals that are named after Presidents.</i><br>
 
