--- a/SecondPage.html
+++ b/SecondPage.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
+<button onclick="goBack()">Go Back</button>
 
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
 <html lang="en">
 <body bgcolor="#ff9933">
 <head>
@@ -15,10 +21,15 @@ body {
 <body>
 
 
-<font size="6"><center><h1>Bennetts Instagram</h1></center></font>
-<font size="6"><center><p>Wanna See My Instagram?</p></center></font>
-<center><div>
-    <h1><a href="https://www.instagram.com/buhnutt/">The Gram</a></h1>
+<font size="6"><center><h1>Options</h1></center></font>
+<font size="6"><center><p>What Are You Trying To Do?</p></center></font>
+<center><div class="btn-group">
+  <button> <a href="sms: 9733030124&body=Hi there, I'd like to place or order for...">I miss you</a></button>
+  <button> <a href="sms: 9733030124&body=Hi there, I'd like to place or order for...">I need attention</a></button>
+<button> <a href="sms: 9733030124&body=Hi there, I'd like to place or order for...">Having a bad day</a></button>
+  <button> <a href="sms: 9733030124&body=Hi there, I'd like to place or order for...">Other!</a></button></center>
+
+  
 </div>
 </body>
 </html>
