--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ I hope you enjoy!</i><br><br>
 
 </h2>
 
-<center><img width="250" src="https://media.licdn.com/dms/image/C5103AQEzxf-c05Dy3A/profile-displayphoto-shrink_200_200/0?e=1546473600&v=beta&t=8ihWqZk-bpGUPP99j1FJpK8BMxIGNEmmoNkAiVLqbW8"></center>
+<center><img width="250" src="https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/680595_v9_bc.jpg"></center>
 
 <p>
 
